# assistant

./: .gitignore  CHANGELOG.md  README.md  assistant.cabal  cabal.project  package.yaml  stack.yaml
app/: Main.hs
src/: Assistant.hs
src/Assistant/: Config.hs  Core.hs  Notify.hs  Report.hs  Req.hs  TimeEntry.hs
