cabal-version:      2.4
name:               assistant
version:            0.1.0.0
author:             Nurlan Alkuatov
maintainer:         alkuatovnurlan@gmail.com
extra-source-files: CHANGELOG.md

executable assistant
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.16.4.0
    hs-source-dirs:   app
    default-language: Haskell2010

library
    build-depends:
        , base        ^>=4.16.4.0
        , fmt
        , http-types
        , mtl
        , modern-uri
        , o-clock
        , req
        , universum
        , unordered-containers
        , time

    default-extensions: NoImplicitPrelude, OverloadedStrings, RecordWildCards, NamedFieldPuns
    exposed-modules:    Assistant
    other-modules:
        Assistant.Report
        Assistant.TimeEntry

    hs-source-dirs:     src
    default-language:   Haskell2010
