cabal-version:      2.4
name:               assistant
version:            0.1.0.0
author:             Nurlan Alkuatov
maintainer:         alkuatovnurlan@gmail.com
extra-source-files: CHANGELOG.md

executable assistant
  main-is:          Main.hs

  -- Modules included in this executable, other than Main.
  -- other-modules:

  -- LANGUAGE extensions used by modules in this package.
  -- other-extensions:
  build-depends:    base ^>=4.16.4.0
  hs-source-dirs:   app
  default-language: Haskell2010

test-suite http-tests
  main-is: Main.hs
  type: exitcode-stdio-1.0
  build-depends:
    , base                  ^>=4.16.4.0

library
  build-depends:
    , aeson
    , aeson-casing
    , base                  ^>=4.16.4.0
    , conduit
    , fmt
    , yaml
    , http-client
    , http-types
    , microlens-platform
    , modern-uri
    , mtl
    , o-clock
    , req
    , time
    , universum
    , unordered-containers
    , nyan-interpolation

  default-extensions:
    UndecidableInstances
    NoImplicitPrelude
    DeriveAnyClass
    DeriveGeneric
    DerivingStrategies
    ExplicitForAll
    FlexibleInstances
    FlexibleContexts
    LambdaCase
    GeneralizedNewtypeDeriving
    NamedFieldPuns
    OverloadedStrings
    RecordWildCards
    ScopedTypeVariables
    TypeApplications
    ViewPatterns
    TypeFamilies
    DataKinds
    TemplateHaskell
    QuasiQuotes

  exposed-modules:    Assistant
  other-modules:
    Assistant.Req
    Assistant.Config
    Assistant.Report
    Assistant.TimeEntry

  hs-source-dirs:     src
  default-language:   Haskell2010
